--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,14 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-webcam": "^6.0.0",
+    "rect-scaler": "^1.0.0",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.4.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=8008 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
