--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "client": "cd ./client && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cd ./client && npm install && npm run build"
   },
