--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8000/",
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "@react-spring/web": "^9.3.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
